# hornlab-metal-bem

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: architecture.md  native-ipc.md
hornlab_metal_bem/: __init__.py  _constants.py  backends.py  bie.py  boundary_lab.py  circsym.py  config.py  losses.py  mesh.py  observation.py  result.py  sweep.py
hornlab_metal_bem/metal/: HornlabMetalBemNative.swift  native.py  (+4 more)
hornlab_solver/: __init__.py  backends.py  bie.py  boundary_lab.py  config.py  device.py  mesh.py  observation.py  result.py  sweep.py
scripts/: 260602-asro2-quarter-native-speed-followup.md  260602-native-resident-solve-plan.md  benchmark_asro2_quarter_assembly_modes.py  benchmark_asro2_quarter_dense_solve_variants.py  benchmark_asro2_quarter_per_kernel_threadgroups.py  benchmark_metal_native.py  benchmark_mlx_dense_solve.py  build_metal_native_release.py  compare_asro2_quarter_directivity.py  validate_native_symmetry_scaleup.py
tests/: test_bempp_feature_parity.py  test_bie_unit.py  test_boundary_lab_adapter.py  test_boundary_lab_backend.py  test_circsym.py  test_circsym_ib.py  test_complex_k_resonance.py  test_complex_robin_gpu_parity.py  test_config.py  test_coupled_ib_mesh_load.py  test_hornlab_metal_bem_namespace.py  test_impedance_bc.py  test_losses.py  test_mesh_orientation.py  test_metal_geometry.py  test_metal_native.py  test_metal_native.py.orig  test_metal_runtime.py  test_metal_session.py  test_multi_source_parity.py  test_native_coupled_ib_validation.py  test_native_symmetry_validation.py  test_observation.py  test_observation_frame_parity.py  test_package_metadata.py  test_pure_mesh.py  test_reference_asro68.py  test_sphere_grid_native.py  test_sweep_callbacks.py  test_sweep_results.py  test_wg_solver_parity.py
(+15 files in other folders)
