[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hornlab-metal-bem"
version = "0.1.0"
description = "Apple Metal accelerated acoustic BEM solver for waveguide and loudspeaker meshes"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "numpy",
    "scipy",
    "meshio",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
markers = [
    "slow: validation tests that run a real BEM solve",
]

[tool.setuptools.package-data]
hornlab_metal_bem = [
    "metal/HornlabMetalBemNative.swift",
    "metal/native_helper/Package.swift",
    "metal/native_helper/Sources/HornlabMetalBemNative/main.swift",
]

[tool.setuptools.packages.find]
include = ["hornlab_metal_bem*"]
